refactor(allocation): separar /problems en endpoints /unassigned, /overcrowded y /overlaps